<?xml version="1.0" encoding="utf-8"?>
<ScrollView
 xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorblue"
    tools:context=".payement">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorblue"
        android:orientation="vertical"
        android:paddingVertical="90dp" >


        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="89dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/paiement"
            android:textColor="@color/colorAccent"
            android:textSize="36sp"
            android:textStyle="bold"></TextView>

        <EditText
            android:id="@+id/cin"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:background="@color/colorwhite"
            android:inputType="number"
            android:ems="8"
            android:hint="@string/cin">

            <requestFocus />
        </EditText>


        <EditText
            android:id="@+id/nomm"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:background="@color/colorwhite"
            android:ems="8"
            android:hint="@string/name" />


        <EditText
            android:id="@+id/prenom"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:background="@color/colorwhite"
            android:ems="8"
            android:hint="@string/prenom"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/numcarte"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:background="@color/colorwhite"

            android:ems="8"
            android:hint="@string/num_ro_de_la_carte"
            android:inputType="number" />


        <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_margin="15dp"

            android:layout_weight="1"
            android:background="@color/colorwhite"
            android:ems="8"
            android:hint="@string/mot_de_passe"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:orientation="horizontal"

            >

            <Button
                android:id="@+id/btnsave"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_margin="22dp"
                android:layout_weight="1"
                android:background="@color/coloryellow"

                android:text="@string/valider"


                />

            <Button
                android:id="@+id/btncancel"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_margin="22dp"
                android:layout_weight="1"
                android:background="@color/colorwhite"
                android:text="@string/annuler" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>